Додано розмітку форми

--- a/index.html
+++ b/index.html
@@ -381,6 +381,29 @@
                     <use href="./images/icons.svg#cross"></use>
                 </svg>
             </button>
+            <b>Залиште свої дані, ми вам передзвонимо</b>
+            <form>
+                <ul>
+                    <li>
+                        <label for="">Ім'я</label>
+                        <input type="text">
+                    </li>
+                    <li>
+                        <label for="">Телефон</label>
+                        <input type="tel">
+                    </li>
+                    <li>
+                        <label for="">Пошта</label>
+                        <input type="email">
+                    </li>
+                </ul>
+                    <label for="">Коментар</label>
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                    <input type="checkbox">
+                    <label for="">Погоджуюся з розсилкою та приймаю <a href="">Умови договору</a></label>
+                    <button type="submit">Відправити</button>
+            </form>
+
         </div>
     </div>
 
