Додано форму підписки у футері

--- a/portfolio.html
+++ b/portfolio.html
@@ -212,7 +212,7 @@
                     </ul>
                 </address>
             </div>
-            <div>
+            <div class="links-block">
                 <b class="appeal">ПРИЄДНУЙТЕСЬ</b>
                 <ul class="footer-icons list">
                     <li class="item">
@@ -244,6 +244,17 @@
                         </a>
                     </li>
                 </ul>
+            </div>
+            <div class="subscription">
+                <b class="appeal">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</b>
+                <form class="subscription-form">
+                    <input class="subscription-field" type="email" name="email-field" placeholder="E-mail">
+                    <button class="subscription-button" type="submit">Підписатися
+                        <svg class="subscription-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
             </div>
         </div>
     </footer>
