--- a/index.html
+++ b/index.html
@@ -371,6 +371,17 @@
                     </li>
                 </ul>
             </div>
+            <div class="subscription">
+                <b class="appeal">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</b>
+                <form class="subscription-form">
+                    <input class="subscription-field" type="email" name="email-field" placeholder="E-mail">
+                    <button class="subscription-button" type="submit">Підписатися
+                        <svg class="subscription-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
 <!-- *МОДАЛЬНЕ ВІКНО -->
