--- a/index.html
+++ b/index.html
@@ -393,52 +393,42 @@
                 </svg>
             </button>
             <b class="modal-appeal">Залиште свої дані, ми вам передзвонимо</b>
-            <form class="modal-form">
-                <ul class="fields list">
-                    <li class="item">
-                        <label class="form-label" for="name">Ім'я</label>
-                        <div class="form-container">
-                            <input class="form-field" type="text" name="name" id="name">
-                            <svg class="form-icon" width="18" height="18">
-                                <use href="./images/icons.svg#person"></use>
-                            </svg>
-                        </div>
-                    </li>
-                    <li class="item">
-                        <label class="form-label" for="tel">Телефон</label>
-                        <div class="form-container">
-                            <input class="form-field" type="tel" name="tel" id="tel">
-                            <svg class="form-icon" width="18" height="18">
-                                <use href="./images/icons.svg#phone"></use>
-                            </svg>
-                        </div>
-                    </li>
-                    <li class="item">
-                        <label class="form-label" for="email">Пошта</label>
-                        <div class="form-container">
-                            <input class="form-field" type="email" name="email" id="email">
-                            <svg class="form-icon" width="18" height="18">
-                                <use href="./images/icons.svg#email"></use>
-                            </svg>
-                        </div>
-                    </li>
-                </ul>
-                    <p class="form-comment">
-                        <label class="form-label" for="comment">Коментар</label>
-                        <textarea class="text-field" name="comment" id="comment" placeholder="Введіть текст"></textarea>
-                    </p>
-                    <p class="form-checkbox">
-                        <input class="terms-checkbox visually-hidden" type="checkbox" name="terms" id="terms">
-                        <svg class="terms-border" width="16" height="15">
-                            <use href="./images/icons.svg#check-border"></use>
-                        </svg>
-                        <svg class="terms-icon" width="16" height="15">
-                            <use href="./images/icons.svg#check"></use>
-                        </svg>
-                        <label class="terms-text" for="terms">Погоджуюся з розсилкою та приймаю <a class="terms-link" href="">Умови
-                                договору</a></label>
-                    </p>
-                    <button class="modal-button" type="submit">Відправити</button>
+            <form>
+                <label class="form-label" for="name">Ім'я</label>
+                <div class="form-container">
+                    <input class="form-field" type="text" name="name" id="name">
+                    <svg class="form-icon" width="18" height="18">
+                        <use href="./images/icons.svg#person"></use>
+                    </svg>
+                </div>
+                <label class="form-label" for="tel">Телефон</label>
+                <div class="form-container">
+                    <input class="form-field" type="tel" name="tel" id="tel">
+                    <svg class="form-icon" width="18" height="18">
+                        <use href="./images/icons.svg#phone"></use>
+                    </svg>
+                </div>
+                <label class="form-label" for="email">Пошта</label>
+                <div class="form-container">
+                    <input class="form-field" type="email" name="email" id="email">
+                    <svg class="form-icon" width="18" height="18">
+                        <use href="./images/icons.svg#email"></use>
+                    </svg>
+                </div>
+                <label class="form-label" for="comment">Коментар</label>
+                <textarea class="text-field" name="comment" id="comment" placeholder="Введіть текст"></textarea>
+                <div class="checkbox-container">
+                    <input class="terms-checkbox visually-hidden" type="checkbox" name="terms" id="terms">
+                    <svg class="terms-border" width="16" height="15">
+                        <use href="./images/icons.svg#check-border"></use>
+                    </svg>
+                    <svg class="terms-icon" width="16" height="15">
+                        <use href="./images/icons.svg#check"></use>
+                    </svg>
+                    <label class="terms-text" for="terms">Погоджуюся з розсилкою та приймаю <a class="terms-link" href="">Умови
+                            договору</a></label>
+                </div>
+                <button class="modal-button" type="submit">Відправити</button>
             </form>
 
         </div>
